[tool.poetry]
name = "feecc-ipfs-gateway"
version = "1.1.2"
description = "A simple IPFS gateway for Feecc QA system"
authors = ["arseniiarsenii <arseniivelichko2@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
fastapi = "^0.78.0"
motor = "^3.0.0"
dnspython = "^2.2.1"
requests = "^2.28.1"
uvicorn = "^0.17.6"
httpx = "^0.23.0"
Pillow = "^9.2.0"
python-multipart = "^0.0.5"
  typed-getenv = "^0.1.2"
IPFS-Toolkit = "^0.3.5"

[tool.poetry.dev-dependencies]
mypy = "^0.960"
black = "^22.6.0"
flake8 = "^4.0.1"
pytest = "^7.1.2"
poetryup = "^0.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = "test*"
strict = true
ignore_missing_imports  = true

[tool.black]
line-length = 120
